<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DejaVuAndroid</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_generic_flow">GenericFlow</string>
    <string name="title_activity_profile_details_flow">ProfileDetailsFlow</string>
    <string name="title_activity_password_pin_auth">PasswordPinAuth</string>
    <string name="token_label">Have a token already ?</string>
    <string name="password_pin">Enter password and pin details below</string>
    <string name="password_auth_text">Enter password attached to your account</string>
    <string name="token_hint">Enter token here</string>
    <string name="phone_hint">Enter Phone Number</string>
    <string name="phone_label">Want a number attached to your account ? Make sure the number entered is on this device</string>

    <string name="verify">Verify</string>
    <string name="card_number">Card Number</string>
    <string name="card_label">Have a credit card details ? Provider the info in the filed below</string>
    <string name="cvv">CVV</string>
    <string name="password">Password</string>
    <string name="pin">pin</string>
    <string name="verify_password">Verify Password</string>
    <string name="verify_pin">Verify Pin</string>
    <string name="choice">choose a registration method</string>
    <string name="soft_string">Soft Token</string>
    <string name="hard_string">Hard Token</string>
    <string name="card_string">Card Details</string>
    <string name="data_picker_text">Pick Expiring Date</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="account_number_hint">Account</string>
    <string name="email_hint">Enter Email</string>
    <string name="name">Enter Name</string>
    <string name="other_names">Other Names</string>
    <string name="function_name">String here</string>
    <string name="account_number_text">Enter the account number attached to this phone</string>

    <string name="json_file">
[{\"Value\": \"filepath\",\"Name\": \"Save\",\"EventDescription\" : \"Button to save Student\",\"Event\": \"Save Button Click\",\"SectionColumnName\": \"null\",\"VersionNumber\": \"1.0.0.0\",\"ID\": \"69\",\"IsToSave\": \"false\",\"SuccessMessage\": \"null\",\"FailureMessage\": \"null\"}]
    </string>

  <string name="data_file">
[{\"filepath\": \"c://filename.exe\"}]
    </string>

        <string name="json_text">
[{\"Value\": \"firstname\",\"Name\": \"Save\",\"EventDescription\" : \"Button to save Student\",\"Event\": \"Save Button Click\",\"SectionColumnName\": \"null\",\"VersionNumber\": \"1.0.0.0\",\"ID\": \"79\",\"IsToSave\": \"false\",\"SuccessMessage\": \"null\",\"FailureMessage\": \"null\"}]
    </string>

  <string name="data_text">
[{\"firstname\": \"emmanuel\"}]
    </string>

        <string name="json_dob">
[{\"Value\": \"date\",\"Name\": \"Save\",\"EventDescription\" : \"Button to save Student\",\"Event\": \"Save Button Click\",\"SectionColumnName\": \"null\",\"VersionNumber\": \"1.0.0.0\",\"ID\": \"89\",\"IsToSave\": \"false\",\"SuccessMessage\": \"null\",\"FailureMessage\": \"null\"}]
    </string>

  <string name="data_dob">
[{\"date\": \"12-06-2005\"}]
    </string>



        <string name="json_test">
[{\"Value\": \"buttonName\",\"Name\": \"Save\",\"EventDescription\" : \"Button to save Student\",\"Event\": \"Save Button Click\",\"SectionColumnName\": \"null\",\"VersionNumber\": \"1.0.0.0\",\"ID\": \"99\",\"IsToSave\": \"false\",\"SuccessMessage\": \"null\",\"FailureMessage\": \"null\"}]
    </string>

  <string name="data_test">
[{\"buttonName\": \"Click\"}]
    </string>


        <string name="json_text2">
[{\"Value\": \"lastname\",\"Name\": \"Save\",\"EventDescription\" : \"Button to save Student\",\"Event\": \"Save Button Click\",\"SectionColumnName\": \"null\",\"VersionNumber\": \"1.0.0.0\",\"ID\": \"109\",\"IsToSave\": \"false\",\"SuccessMessage\": \"null\",\"FailureMessage\": \"null\"}]
    </string>

  <string name="data_text2">
[{\"lastname\": \"nosa\"}]
    </string>

        <string name="json_drop">
[{\"Value\": \"droplist\",\"Name\": \"Save\",\"EventDescription\" : \"Button to save Student\",\"Event\": \"Save Button Click\",\"SectionColumnName\": \"null\",\"VersionNumber\": \"1.0.0.0\",\"ID\": \"129\",\"IsToSave\": \"false\",\"SuccessMessage\": \"null\",\"FailureMessage\": \"null\"}]
    </string>

  <string name="data_drop">
[{\"droplist\": \"nosa,emma,wale,josh,oty,appzone,example\"}]
    </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
