<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/card_label"
        android:layout_margin="5dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@id/card_number"
        android:gravity="center"
        android:hint="@string/card_number"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@id/data_picker_text"
        android:text="@string/data_picker_text"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@id/cvv"
        android:gravity="center"
        android:hint="@string/cvv"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@id/pin"
        android:gravity="center"
        android:hint="@string/pin"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@id/verify_button"
        android:text="@string/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>