<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:background="#fff"
    android:clickable="true"
    android:gravity="center"
    android:layout_height="fill_parent">

    <TextView
        android:textColor="#000"
        android:id="@id/data_picker_text"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:textColor="#000"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:id="@id/email_field"
        android:hint="@string/email_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@id/gender_spinner"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <EditText
        android:textColor="#000"
        android:inputType="textPersonName"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:id="@id/name_field"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:textColor="#000"
        android:inputType="textPersonName"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:hint="@string/other_names"
        android:id="@id/other_names_fiel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:padding="@dimen/activity_horizontal_margin"
        android:id="@id/verify_button"
        android:text="@string/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>