<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#fff"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:gravity="center"
        android:id="@id/token_label"
        android:text="@string/token_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@id/token_field"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:hint="@string/token_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@id/verify_button"
        android:text="@string/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>